# operating-system

./: .env.example  .gitignore  .hadolint.yaml  .taplo.toml  Cargo.toml  Claude.md  Dockerfile  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: api.md
migrations/: 20240101000001_create_users.sql  20240101000002_create_sessions.sql  20240101000003_create_api_tokens.sql  20240101000004_create_boards.sql  20240101000005_create_columns.sql  20240101000006_create_cards.sql  20240101000007_create_tags.sql  20240101000008_create_chat_messages.sql  20240101000009_add_llm_context.sql  20240101000010_make_chat_board_optional.sql  20240101000011_standalone_cards.sql  20240101000012_create_comments.sql
src/: error.rs  lib.rs  main.rs  state.rs
src/auth/: extractor.rs  mod.rs  password.rs
src/handlers/: auth.rs  boards.rs  cards.rs  chat.rs  columns.rs  comments.rs  inbox.rs  mod.rs  tags.rs  web.rs
src/models/: board.rs  card.rs  chat.rs  column.rs  comment.rs  mod.rs  session.rs  tag.rs  token.rs  user.rs
src/repo/: board.rs  card.rs  card_board.rs  chat_message.rs  column.rs  comment.rs  mod.rs  session.rs  tag.rs  token.rs  user.rs
src/services/: mod.rs  ollama.rs  web_search.rs
src/static/css/: main.css
src/static/js/: chat.js  global-chat.js  kanban-resize.js  theme.js
src/static/scss/: _base.scss  _chat.scss  _components.scss  _kanban.scss  _theme.scss  _variables.scss  main.scss
templates/: base.html  board_detail.html  board_new.html  board_settings.html  boards.html  card_detail.html  inbox.html  index.html  login.html  register.html  user_settings.html
tests/: api_tests.rs  integration_test.rs
