[package]
name = "personal-os"
version = "0.1.0"
edition = "2021"
authors = ["Personal OS Team"]
description = "Personal Operating System - A Kanban-based task management webapp"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
argon2 = "0.5"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"

# UUID and time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Utilities
anyhow = "1"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
