[package]
name = "personal-os"
version = "0.1.0"
edition = "2021"
authors = ["Personal OS Team"]
description = "Personal Operating System - A Kanban-based task management webapp"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
argon2 = "0.5"
hex = "0.4"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

# UUID and time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

# Templating
askama = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HTML parsing (for web search)
scraper = "0.22"
urlencoding = "2.1"

# Utilities
anyhow = "1"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "18"
cookie = "0.18"
reqwest = { version = "0.12", features = ["json", "cookies"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
